Fixed bug #31465 (False warning in unpack() when working with *).